--- a/单词缩写.md
+++ b/单词缩写.md
@@ -51,3 +51,17 @@ EVAL:
 7.monotonically increase单调递增
 
 8.period-separated句点分隔
+
+9.glossary术语表
+
+10.sophisticated visual effects复杂的视觉效果
+
+11.Accelerometer加速度计
+
+Magnetometer磁力仪
+
+Gyroscope陀螺仪
+
+12.background thread后台线程
+
+13.network access网络访问
