--- a/单词缩写.md
+++ b/单词缩写.md
@@ -65,3 +65,11 @@ Gyroscope陀螺仪
 12.background thread后台线程
 
 13.network access网络访问
+
+14.terminology术语
+
+15.naming conventions
+
+16.wildcard通配符
+
+17.digital identity数字身份
