--- a/单词缩写.md
+++ b/单词缩写.md
@@ -74,3 +74,9 @@ Gyroscope陀螺仪
 16.wildcard通配符
 
 17.digital identity数字身份
+
+18.Designated Initializer指定的初始化程序
+
+secondary Initializer辅助的初始化程序
+
+19.Interface Builder界面生成器
