--- a/约定有哪些.md
+++ b/约定有哪些.md
@@ -4,4 +4,15 @@ shared+类类型
 
 Several Cocoa framework classes are singletons. They include `NSFileManager`, `NSWorkspace`, and, in UIKit, `UIApplication` and `UIAccelerometer`. The name of the factory method returning the singleton instance has, by convention, the form `shared`*ClassType*. Examples from the Cocoa frameworks are `sharedFileManager`, `sharedColorPanel`, and `sharedWorkspace`.
 
-2.
+2.在ARC下，存取方法名不能以new开始
+
+意味着，你不能定义以new开始的属性名，除非你指定一个别的getter方法名，如下:
+
+>//Won't work:
+>
+>@property NSString *newTitle;
+>
+>//Works:
+>
+>@property (getter=theNewTitle) NSString *newTitle;
+
