--- a/苹果文档.md
+++ b/苹果文档.md
@@ -14,6 +14,10 @@ https://developer.apple.com/library/content/documentation/MacOSX/Conceptual/BPFr
 
 https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/cross_development/Introduction/Introduction.html#//apple_ref/doc/uid/10000163i
 
+>讲述了如何在系统之间进行代码的兼容
+>
+>判断方法、类等是否可用
+
 4.Cocoa Core Competencies ★★★★★
 
 https://developer.apple.com/library/content/documentation/General/Conceptual/DevPedia-CocoaCore/ObjectCreation.html#//apple_ref/doc/uid/TP40008195-CH39-SW1
@@ -127,5 +131,17 @@ https://developer.apple.com/library/content/documentation/DeveloperTools/Concept
 28.Memory Management Programming Guide for Core Foundation
 
 https://developer.apple.com/library/content/documentation/CoreFoundation/Conceptual/CFMemoryMgmt/CFMemoryMgmt.html#//apple_ref/doc/uid/10000127i
+
+29.Transitioning to ARC Release Notes
+
+https://developer.apple.com/library/content/releasenotes/ObjectiveC/RN-TransitioningToARC/Introduction/Introduction.html#//apple_ref/doc/uid/TP40011226-CH1-SW4
+
+>介绍了一些属性关键字的使用，
+>
+>包括管理无损桥接等
+>
+>不支持弱引用的类有：`NSATSTypesetter`, `NSColorSpace`, `NSFont`, `NSMenuView`, `NSParagraphStyle`, `NSSimpleHorizontalTypesetter`, and `NSTextView`
+
+
 
 6.xinetd和inetd比较？
