--- a/苹果文档.md
+++ b/苹果文档.md
@@ -142,6 +142,14 @@ https://developer.apple.com/library/content/releasenotes/ObjectiveC/RN-Transitio
 >
 >不支持弱引用的类有：`NSATSTypesetter`, `NSColorSpace`, `NSFont`, `NSMenuView`, `NSParagraphStyle`, `NSSimpleHorizontalTypesetter`, and `NSTextView`
 
+30.Objective-C Runtime Programming Guide
 
+https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/ObjCRuntimeGuide/Articles/ocrtInteracting.html#//apple_ref/doc/uid/TP40008048-CH103-SW2
+
+31.Blocks Programming Topics
+
+https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/Blocks/Articles/bxGettingStarted.html#//apple_ref/doc/uid/TP40007502-CH7-SW2
+
+32.
 
 6.xinetd和inetd比较？
