--- a/一些链接.md
+++ b/一些链接.md
@@ -7,3 +7,7 @@ http://clang.llvm.org/docs/UsersManual.html
 2.Transitioning to ARC Release Notes
 
 https://developer.apple.com/library/content/releasenotes/ObjectiveC/RN-TransitioningToARC/Introduction/Introduction.html
+
+3.2017，我的iOS进阶规划
+
+http://www.cocoachina.com/programmer/20170122/18604.html
